chore: rewrite test to not use MockitoRule (#514)
I'm a self-approving badass.