@@ -1,7 +1,11 @@
 package com.purbon.kafka.topology.integration.backend;
 
 import static com.purbon.kafka.topology.CommandLineInterface.BROKERS_OPTION;
-import static com.purbon.kafka.topology.Constants.*;
+import static com.purbon.kafka.topology.Constants.ALLOW_DELETE_TOPICS;
+import static com.purbon.kafka.topology.Constants.REDIS_HOST_CONFIG;
+import static com.purbon.kafka.topology.Constants.REDIS_PORT_CONFIG;
+import static com.purbon.kafka.topology.Constants.STATE_PROCESSOR_IMPLEMENTATION_CLASS;
+import static com.purbon.kafka.topology.Constants.TOPOLOGY_TOPIC_STATE_FROM_CLUSTER;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.purbon.kafka.topology.BackendController;
@@ -9,6 +13,7 @@ import com.purbon.kafka.topology.Configuration;
 import com.purbon.kafka.topology.ExecutionPlan;
 import com.purbon.kafka.topology.TopicManager;
 import com.purbon.kafka.topology.api.adminclient.TopologyBuilderAdminClient;
+import com.purbon.kafka.topology.backend.Backend;
 import com.purbon.kafka.topology.backend.BackendState;
 import com.purbon.kafka.topology.backend.RedisBackend;
 import com.purbon.kafka.topology.integration.containerutils.ContainerTestUtils;
@@ -26,31 +31,30 @@ import io.confluent.kafka.schemaregistry.client.SchemaRegistryClient;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Properties;
 import org.apache.kafka.clients.admin.AdminClient;
 import org.apache.kafka.common.acl.AclPermissionType;
 import org.apache.kafka.common.resource.ResourceType;
-import org.junit.*;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.junit.After;
+import org.junit.AfterClass;
+import org.junit.Assert;
+import org.junit.Before;
+import org.junit.BeforeClass;
+import org.junit.Test;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.utility.DockerImageName;
 import redis.clients.jedis.Jedis;
 
 public class RedisBackendIT {
 
-  @Rule
-  public GenericContainer redis =
-      new GenericContainer<>(DockerImageName.parse("redis:" + ContainerTestUtils.REDIS_VERSION))
-          .withExposedPorts(6379);
-
   private static SaslPlaintextKafkaContainer container;
+  private GenericContainer<?> redis;
   private TopicManager topicManager;
-  private AdminClient kafkaAdminClient;
-
   private ExecutionPlan plan;
-
-  @Rule public MockitoRule mockitoRule = MockitoJUnit.rule();
   private Jedis jedis;
   private static String bucket;
 
@@ -59,31 +63,30 @@ public class RedisBackendIT {
     bucket = "bucket";
     container = new SaslPlaintextKafkaContainer();
     container.start();
-    ContainerTestUtils.clearAclsAndTopics(container);
-  }
-
-  @AfterClass
-  public static void teardown() {
-    container.stop();
   }
 
   @Before
   public void before() throws IOException {
+    ContainerTestUtils.clearAclsAndTopics(container);
     Files.deleteIfExists(Paths.get(".cluster-state"));
+    redis =
+        new GenericContainer<>(DockerImageName.parse("redis:" + ContainerTestUtils.REDIS_VERSION))
+            .withExposedPorts(6379);
+    redis.start();
 
-    kafkaAdminClient = ContainerTestUtils.getSaslJulieAdminClient(container);
-    TopologyBuilderAdminClient adminClient = new TopologyBuilderAdminClient(kafkaAdminClient);
+    final AdminClient kafkaAdminClient = ContainerTestUtils.getSaslJulieAdminClient(container);
+    final TopologyBuilderAdminClient adminClient = new TopologyBuilderAdminClient(kafkaAdminClient);
 
     final SchemaRegistryClient schemaRegistryClient = new MockSchemaRegistryClient();
     final SchemaRegistryManager schemaRegistryManager =
         new SchemaRegistryManager(schemaRegistryClient, System.getProperty("user.dir"));
 
     this.jedis = new Jedis(redis.getHost(), redis.getFirstMappedPort());
-    var backend = new RedisBackend(jedis, bucket);
+    final Backend backend = new RedisBackend(jedis, bucket);
 
     this.plan = ExecutionPlan.init(new BackendController(backend), System.out);
 
-    Properties props = new Properties();
+    final Properties props = new Properties();
     props.put(TOPOLOGY_TOPIC_STATE_FROM_CLUSTER, true);
     props.put(ALLOW_DELETE_TOPICS, true);
     props.put(
@@ -91,23 +94,32 @@ public class RedisBackendIT {
     props.put(REDIS_HOST_CONFIG, redis.getHost());
     props.put(REDIS_PORT_CONFIG, redis.getFirstMappedPort());
 
-    HashMap<String, String> cliOps = new HashMap<>();
+    final HashMap<String, String> cliOps = new HashMap<>();
     cliOps.put(BROKERS_OPTION, "");
 
-    Configuration config = new Configuration(cliOps, props);
+    final Configuration config = new Configuration(cliOps, props);
 
     this.topicManager = new TopicManager(adminClient, schemaRegistryManager, config);
   }
 
+  @After
+  public void after() {
+    redis.stop();
+  }
+
+  @AfterClass
+  public static void teardown() {
+    container.stop();
+  }
+
   @Test
   public void testStoreAndFetch() throws IOException {
-
-    String host = redis.getHost();
-    int port = redis.getFirstMappedPort();
-    RedisBackend rsp = new RedisBackend(host, port, bucket);
+    final String host = redis.getHost();
+    final int port = redis.getFirstMappedPort();
+    final RedisBackend rsp = new RedisBackend(host, port, bucket);
     rsp.load();
 
-    TopologyAclBinding binding =
+    final TopologyAclBinding binding =
         TopologyAclBinding.build(
             ResourceType.TOPIC.name(),
             "foo",
@@ -117,17 +129,18 @@ public class RedisBackendIT {
             "LITERAL",
             AclPermissionType.ALLOW.name());
 
-    List<String> topics = Arrays.asList("foo", "bar");
-    var connector = new KafkaConnectArtefact("path", "label", "name", "some-hash");
-    List<KafkaConnectArtefact> connectors = Arrays.asList(connector);
-    BackendState state = new BackendState();
+    final List<String> topics = Arrays.asList("foo", "bar");
+    final KafkaConnectArtefact connector =
+        new KafkaConnectArtefact("path", "label", "name", "some-hash");
+    final List<KafkaConnectArtefact> connectors = List.of(connector);
+    final BackendState state = new BackendState();
     state.addTopics(topics);
     state.addBindings(Collections.singleton(binding));
     state.addConnectors(connectors);
 
     rsp.save(state);
 
-    BackendState recoveredState = rsp.load();
+    final BackendState recoveredState = rsp.load();
 
     Assert.assertEquals(2, recoveredState.getTopics().size());
     assertThat(state.getTopics()).contains("foo", "bar");
@@ -140,30 +153,29 @@ public class RedisBackendIT {
 
   @Test
   public void testTopicCreation() throws IOException {
-
-    Topology topology = new TopologyImpl();
+    final Topology topology = new TopologyImpl();
     topology.setContext("testTopicCreation");
-    Project project = new ProjectImpl("project");
+    final Project project = new ProjectImpl("project");
     topology.addProject(project);
 
     HashMap<String, String> config = new HashMap<>();
     config.put(TopicManager.NUM_PARTITIONS, "1");
     config.put(TopicManager.REPLICATION_FACTOR, "1");
 
-    Topic topicA = new Topic("topicA", config);
+    final Topic topicA = new Topic("topicA", config);
     project.addTopic(topicA);
 
     config = new HashMap<>();
     config.put(TopicManager.NUM_PARTITIONS, "1");
     config.put(TopicManager.REPLICATION_FACTOR, "1");
 
-    Topic topicB = new Topic("topicB", config);
+    final Topic topicB = new Topic("topicB", config);
     project.addTopic(topicB);
 
     topicManager.updatePlan(topology, plan);
     plan.run();
 
-    String content = jedis.get(bucket);
+    final String content = jedis.get(bucket);
     assertThat(content)
         .contains(
             "\"topics\" : [\n    \"testTopicCreation.project.topicB\",\n    \"testTopicCreation.project.topicA\"\n  ]");
